--- a/bit-shop-api/.env
+++ b/bit-shop-api/.env
@@ -1,2 +1,2 @@
 PORT=5000
-PATO=http://loacalhost:PATO
+MONGO_ATLAS=mongodb+srv://striker:compaq*@clusterstriker.ysjmi.mongodb.net/bit-shop?retryWrites=true&w=majority
