--- a/bit-shop-front/package.json
+++ b/bit-shop-front/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
@@ -18,6 +19,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^1.6.1",
     "mdb-ui-kit": "^3.10.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
